--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,8 @@
-module.exports = {
+{
   "presets": [
-    ["@babel/preset-env", {
-      "modules": false
-    }],
+     ["@babel/preset-env", {
+       "modules": false
+     }],
     "@babel/preset-typescript"
   ],
   "plugins": [
@@ -11,6 +11,7 @@ module.exports = {
     "@babel/proposal-object-rest-spread"
   ],
   "only": [
-    "src/**"
+    "./src",
+    "./test"
   ]
-};
+}
