--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "description": "AngularJS wrapper for driver.js tour library",
   "main": "lib/ngdriver.js",
-  "types": "types/ngdriver.d.ts",
+  "types": "types/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "karma start karma.conf.js",
     "type-check": "tsc",
     "build": "rollup -c",
     "watch": "rollup -c --watch"
@@ -25,22 +25,28 @@
   },
   "homepage": "https://github.com/katrotz/ngdriver.js#readme",
   "dependencies": {
-    "driver.js": "^0.3.6"
+    "driver.js": "0.7.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.42",
-    "@babel/core": "^7.0.0-beta.42",
-    "@babel/plugin-external-helpers": "^7.0.0-beta.42",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.42",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.42",
-    "@babel/preset-env": "^7.0.0-beta.42",
-    "@babel/preset-typescript": "^7.0.0-beta.42",
-    "@types/angular": "^1.6.43",
-    "angular": "^1.6.9",
-    "babel-preset-env": "^1.6.1",
-    "rollup": "^0.57.1",
-    "rollup-plugin-babel": "^4.0.0-beta.2",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "typescript": "^2.6.2"
+    "@babel/cli": "7.0.0",
+    "@babel/core": "7.0.0",
+    "@babel/plugin-external-helpers": "7.0.0",
+    "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/preset-env": "7.0.0",
+    "@babel/preset-typescript": "7.0.0",
+    "@types/angular": "1.6.45",
+    "angular": "1.7.3",
+    "angular-mocks": "1.7.3",
+    "babel-preset-env": "1.7.0",
+    "jasmine-core": "3.2.1",
+    "karma": "3.0.0",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-jasmine": "1.1.2",
+    "karma-rollup-preprocessor": "6.0.1",
+    "rollup": "0.65.0",
+    "rollup-plugin-babel": "^4.0.3",
+    "rollup-plugin-node-resolve": "3.4.0",
+    "typescript": "3.0.3"
   }
 }
