--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "types": "types/index.d.ts",
   "scripts": {
     "test": "karma start karma.conf.js",
+    "test:ci": "karma start karma.conf.js --single-run",
     "type-check": "tsc",
     "build": "rollup -c",
+    "build:prod": "rollup -c --environment BUILD:production",
     "watch": "rollup -c --watch"
   },
   "repository": {
@@ -48,6 +50,7 @@
     "rollup": "0.65.0",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-node-resolve": "3.4.0",
+    "rollup-plugin-uglify": "^5.0.2",
     "typescript": "3.0.3"
   }
 }
